@@ -11,12 +11,14 @@ repositories {
 
 dependencies {
     implementation 'org.jetbrains:annotations:24.0.0'
+    implementation 'net.java.dev.jna:jna-platform:5.12.1'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
 test {
     useJUnitPlatform()
+    jvmArgs(['--enable-preview'])
 }
 
 
@@ -30,6 +32,10 @@ sourceSets {
 
 compileJava {
     options.compilerArgs += ["-h", file("native/include/windex/jni")]
+}
+
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
 }
 
 tasks.register('compileJNI') {
